--- a/src/app/shared/layouts/right-config/right-config.component.scss
+++ b/src/app/shared/layouts/right-config/right-config.component.scss
@@ -25,7 +25,7 @@ $config-width:230px;
     font-size: $lg-text;
     @include transition(all .4s);
     &:hover {
-        color: $primary;
+        color: $white;
     }
 }
 
