added subject edit

--- a/src/app/pages/students/components/subject-categories/subject-categories.component.html
+++ b/src/app/pages/students/components/subject-categories/subject-categories.component.html
@@ -14,7 +14,7 @@
             <td>{{index}}</td>
             <td>{{subject.name}}</td>            
             <td>
-              <a>
+              <a (click)="editSubject(subject)">
                 <span class="fa fa-pencil-square-o mr-2"></span>
               </a>
               <a>
