--- a/src/app/shared/layouts/pages-top/pages-top.component.html
+++ b/src/app/shared/layouts/pages-top/pages-top.component.html
@@ -32,6 +32,11 @@
       <span class="fa fa-envelope fa-fw"></span>
       <span class="badge" *ngIf="tip.email"></span>
     </div>
+    <div class="msg-entrance email">
+      <a href="login">
+        <span class="fa fa-sign-out fa-fw"></span>
+      </a>            
+    </div>
   </div>
 
 </div>
