--- a/src/app/pages/table/components/basic-tables/basic-tables.component.html
+++ b/src/app/pages/table/components/basic-tables/basic-tables.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-6">
     <card cardTitle="basic table">
-      <table class="table">
+      <table class="table table-responsive">
         <thead>
           <tr>
             <th>#</th>
