--- a/src/app/pages/table/components/data-table/data-table.component.html
+++ b/src/app/pages/table/components/data-table/data-table.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-12">
     <card cardTitle="Data Table">
-      <table class="table table-bordered table-hover">
+      <table class="table table-bordered table-hover table-responsive">
         <thead>
           <tr>
             <th>FIRSTNAME</th>
