added search filters

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -14,7 +14,8 @@
       </span>
       <input class="form-control with-primary-addon" placeholder="Password" type="password">
     </div>
-    <button class="btn btn-lg btn-primary">Login</button>
+    <a href="" class="btn btn-link">Forgot Password ?</a>
+    <button class="btn btn-lg btn-primary" (click)="login()">Login</button>
     <a href="" class="btn btn-link">Register Now. →</a>
   </div>
 </div>
