--- a/src/app/pages/index/index.component.scss
+++ b/src/app/pages/index/index.component.scss
@@ -48,3 +48,9 @@
         @include box-shadow( 0 2px 10px 0 rgba($info, .5));
     }
 }
+
+.class-subject {
+    .table-responsive {
+        display: table;
+    }
+}
