fixed prod issues

--- a/src/app/pages/students/components/add-class/add-class.component.html
+++ b/src/app/pages/students/components/add-class/add-class.component.html
@@ -20,7 +20,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 form-group">
-                    <button [disabled]="!editClassCategoryForm.valid" class="btn btn-primary">Update</button>
+                    <button class="btn btn-primary">Update</button>
                 </div>
             </form>
         </card>
