--- a/src/app/loader/components/loader/loader.component.scss
+++ b/src/app/loader/components/loader/loader.component.scss
@@ -1,5 +1,3 @@
-@import '~assets/theme/conf';
-
 // Absolute Center loader
 .loading {
   bottom: 0;
@@ -15,7 +13,7 @@
 
   // Transparent Overlay
   &::before {
-    background-color: $grey;
+    background-color: #000000;
     content: '';
     display: block;
     height: 100%;
@@ -28,9 +26,8 @@
 
   &:not(:required) {
     &::after {
-      @include animation(0, 1.2s, loader);
       border: 5px solid transparent;
-      border-color: $primary transparent;
+      border-color: #000 transparent;
       border-radius: 50%;
       content: ' ';
       display: block;
@@ -41,13 +38,4 @@
   }
 }
 
-// Animation
-@keyframes loader {
-  0% {
-    @include rotate(0deg);
-  }
 
-  100% {
-    @include rotate(360deg);
-  }
-}
