--- a/src/app/shared/theme/color-schemes/_default.scss
+++ b/src/app/shared/theme/color-schemes/_default.scss
@@ -13,6 +13,7 @@ $border-color:rgba($black, .1);
 $table-border-color:#e6e6e6;
 $fonts-color:#26253c;
 $primary:#004C89;
+$secondry: #26253c;
 $success:#16be9a;
 $danger:#fa5167;
 $warning:#ff7403;
