--- a/src/app/pages/categeories/components/categeories/categeories.component.html
+++ b/src/app/pages/categeories/components/categeories/categeories.component.html
@@ -1,168 +1,211 @@
 <div class="row">
   <div class="col-md-12">
     <card cardTitle="CATEGEORIES">
+      <div class="pl-4">
 
-      
-
-      <div class="row">
-          <div class="col-md-6">
-              <div class="d-flex justify-content-start page-title page-title-m3">
-                  <div class="p-0 d-none d-sm-flex">
-                    <div class="p-0 mr-2">
-                      <button type="button" class="btn btn-primary" (click)="addClassCategory()">+ Add Class</button>
-                    </div>
-                  </div>
-                  <div class="p-0">
-                    <div class="d-flex">
-                      <div class="p-0">
-                        <div class="form-group has-search">
-                          <span class="fa fa-search form-control-feedback"></span>
-                          <input type="text" class="form-control" placeholder="Search" name="search" 
-                            [(ngModel)]="searchClassInput">
-                        </div>
-                      </div>                
-                    </div>
-                  </div>
-                  <div class="ml-auto p-0 d-none d-md-flex">
-                  <!-- <button type="button" *ngIf="showActivateBtn" (click)="activateSelectedUsers()" class="btn btn-primary btn-sm ml-1 mr-1">{{labels.BUTTONS.DEACTIVATE}}</button> -->             
-                  </div>
-                </div>
-
-              <card cardTitle="Class Category">
-                    <table class="table table-bordered table-hover">
-                        <thead>
-                          <tr>
-                            <th>ID</th>
-                            <th>NAME</th>
-                            <th>CATEGORY</th>            
-                            <th>ACTIONS</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr *ngFor="let item of classCategories | paginate: { id: 'pager', itemsPerPage: pageSize, currentPage: pageNumber};let index = index">
-                            <td>{{index + 1}}</td>
-                            <td>{{item.name}}</td>
-                            <td>{{ getCategory(item)}}</td>
-                            <td>
-                              <a>
-                                <span class="fa fa-pencil-square-o mr-2"></span>
-                              </a>
-                              <a>
-                                <span class="fa fa-trash"></span>              
-                              </a>
-                            </td>
-                          </tr>
-                          <tr *ngIf="classCategories.length === 0">
-                            <td colspan="3">No Data Found</td>
-                          </tr>
-                        </tbody>
-                      </table>
-                      <form class="pagination-wrapper">
-                        <div class="form-group pages">
-                          <pagination-controls class="my-pagination" id="pager" (pageChange)="pageChanged($event)" maxSize="9" directionLinks="true"
-                            autoHide="true" previousLabel="Prev" nextLabel="Next" screenReaderPaginationLabel="Pagination" screenReaderPageLabel="page"
-                            screenReaderCurrentLabel="You're on page">
-                          </pagination-controls>
-                        </div>
-                        <div class="form-group options pages">
-                          <div class="input-group input-group-sm">
-                            <select class="form-control" name="pageChangedName" [(ngModel)]="pageSize" (ngModelChange)="loadData()">
-                              <option>1</option>
-                              <option>5</option>
-                              <option>10</option>
-                              <option>20</option>
-                              <option>50</option>
-                              <option>100</option>
-                              <option>200</option>
-                            </select>
-                            <span class="input-group-addon addon-right">Per Page</span>
-                          </div>
-                        </div>
-                      </form>
-                </card>
-            </div>
-            <div class="col-md-6">
-                <div class="d-flex justify-content-start page-title page-title-m3">
-                    <div class="p-0 d-none d-sm-flex">
-                      <div class="p-0 mr-2">
-                        <button type="button" class="btn btn-primary" (click)="addSubjectCategory()">+ Add Subject</button>
-                      </div>
-                    </div>
-                    <div class="p-0">
-                      <div class="d-flex">
-                        <div class="p-0">
-                          <div class="form-group has-search">
-                            <span class="fa fa-search form-control-feedback"></span>
-                            <input type="text" class="form-control" placeholder="Search" name="search" 
-                              [(ngModel)]="searchSubjectInput">
-                          </div>
-                        </div>                
-                      </div>
-                    </div>
-                    <div class="ml-auto p-0 d-none d-md-flex">
-                    <!-- <button type="button" *ngIf="showActivateBtn" (click)="activateSelectedUsers()" class="btn btn-primary btn-sm ml-1 mr-1">{{labels.BUTTONS.DEACTIVATE}}</button> -->             
-                    </div>
-                  </div>
-
-                <card cardTitle="Subject Category">
-                    <table class="table table-bordered table-hover">
-                        <thead>
-                          <tr>
-                            <th>ID</th>
-                            <th>NAME</th>            
-                            <th>ACTIONS</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr *ngFor="let item of subjectCategories | paginate: { id: 'pager', itemsPerPage: pageSize, currentPage: pageNumber};let index = index">
-                            <td>{{item.id}}</td>
-                            <td>{{item.name}}</td>
-                            <td>
-                              <a>
-                                <span class="fa fa-pencil-square-o mr-2"></span>
-                              </a>
-                              <a>
-                                <span class="fa fa-trash"></span>              
-                              </a>
-                            </td>
-                          </tr>
-                          <tr *ngIf="subjectCategories.length === 0">
-                              <td colspan="3">No Data Found</td>
-                            </tr>
-                        </tbody>
-                      </table>
-                      <form class="pagination-wrapper">
-                        <div class="form-group pages">
-                          <pagination-controls class="my-pagination" id="pager" (pageChange)="pageChanged($event)" maxSize="9" directionLinks="true"
-                            autoHide="true" previousLabel="Prev" nextLabel="Next" screenReaderPaginationLabel="Pagination" screenReaderPageLabel="page"
-                            screenReaderCurrentLabel="You're on page">
-                          </pagination-controls>
-                        </div>
-                        <div class="form-group options pages">
-                          <div class="input-group input-group-sm">
-                            <select class="form-control" name="pageChangedName" [(ngModel)]="pageSize" (ngModelChange)="loadData()">
-                              <option>1</option>
-                              <option>5</option>
-                              <option>10</option>
-                              <option>20</option>
-                              <option>50</option>
-                              <option>100</option>
-                              <option>200</option>
-                            </select>
-                            <span class="input-group-addon addon-right">Per Page</span>
-                          </div>
-                        </div>
-                      </form>
-                </card>
-            </div>
+        <ul class="tree" *ngIf="primaryCategories">
+          <li *ngFor="let category of primaryCategories;let i = index;">
+            <span (click)="hideme[i] = !hideme[i]">{{category.name}} </span>
+            <a (click)="addClassToCategory(category, i)"><span class="fa fa-plus"></span></a>
+            <ul class="ml-4" [hidden]="!hideme[i]">
+              <li *ngFor="let class of category.classes;let j = index;">
+                <span class="mr-2">{{class.name}}</span>
+                <a class="mr-1" (click)="editClassToCategory(class)"><span class="fa fa-edit"></span></a>
+                <a class="ml-1" (click)="deleteClassToCategory(i, j)"><span class="fa fa-trash"></span></a>
+              </li>
+            </ul>
+          </li>
+        </ul>
 
       </div>
-      
 
-      
-
-      
-              
     </card>
   </div>
+
+  <!-- <div class="col-md-12">
+    <card cardTitle="CATEGEORIES">
+
+      <div class="col-md-12" *ngIf="showCategories">
+        <label class="mr-2">Select Category: </label>
+        <select (change)="filterForeCasts($event.target.value)">
+          <option value="0">--All--</option>
+          <option *ngFor="let category of primaryCategories" value={{category.id}}>
+            {{category.name}}
+          </option>
+        </select>
+        <hr>
+      </div>
+
+      <div class="col-md-12" *ngIf="classCategories.length > 0">
+        <label class="mr-2">Select Class: </label>
+        <select (change)="filterForeCasts($event.target.value)">
+          <option value="0">--All--</option>
+          <option *ngFor="let category of classCategories" value={{category.id}}>
+            {{category.name}}
+          </option>
+        </select>
+        <button type="button" class="btn btn-primary" (click)="addClassCategory()">+ Add Class</button>
+        <hr>
+      </div>
+
+      <div class="row" *ngIf="showRespectiveCategories">
+        <div class="col-md-6">
+          <div class="d-flex justify-content-start page-title page-title-m3">
+            <div class="p-0 d-none d-sm-flex">
+              <div class="p-0 mr-2">
+                <button type="button" class="btn btn-primary" (click)="addClassCategory()">+ Add Class</button>
+              </div>
+            </div>
+            <div class="p-0">
+              <div class="d-flex">
+                <div class="p-0">
+                  <div class="form-group has-search">
+                    <span class="fa fa-search form-control-feedback"></span>
+                    <input type="text" class="form-control" placeholder="Search" name="search"
+                      [(ngModel)]="searchClassInput">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="ml-auto p-0 d-none d-md-flex">
+              <button type="button" *ngIf="showActivateBtn" (click)="activateSelectedUsers()" class="btn btn-primary btn-sm ml-1 mr-1">{{labels.BUTTONS.DEACTIVATE}}</button>
+            </div>
+          </div>
+
+          <card cardTitle="Class Category">
+            <table class="table table-bordered table-hover">
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>NAME</th>
+                  <th>ACTIONS</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr
+                  *ngFor="let item of classCategories | paginate: { id: 'pager', itemsPerPage: pageSize, currentPage: pageNumber};let index = index">
+                  <td>{{item.id}}</td>
+                  <td>{{item.name}}</td>
+                  <td>
+                    <a>
+                      <span class="fa fa-pencil-square-o mr-2"></span>
+                    </a>
+                    <a>
+                      <span class="fa fa-trash"></span>
+                    </a>
+                  </td>
+                </tr>
+                <tr *ngIf="classCategories.length === 0">
+                  <td colspan="3">No Data Found</td>
+                </tr>
+              </tbody>
+            </table>
+            <form class="pagination-wrapper">
+              <div class="form-group pages">
+                <pagination-controls class="my-pagination" id="pager" (pageChange)="pageChanged($event)" maxSize="9"
+                  directionLinks="true" autoHide="true" previousLabel="Prev" nextLabel="Next"
+                  screenReaderPaginationLabel="Pagination" screenReaderPageLabel="page"
+                  screenReaderCurrentLabel="You're on page">
+                </pagination-controls>
+              </div>
+              <div class="form-group options pages">
+                <div class="input-group input-group-sm">
+                  <select class="form-control" name="pageChangedName" [(ngModel)]="pageSize"
+                    (ngModelChange)="loadData()">
+                    <option>1</option>
+                    <option>5</option>
+                    <option>10</option>
+                    <option>20</option>
+                    <option>50</option>
+                    <option>100</option>
+                    <option>200</option>
+                  </select>
+                  <span class="input-group-addon addon-right">Per Page</span>
+                </div>
+              </div>
+            </form>
+          </card>
+        </div>
+        <div class="col-md-6">
+          <div class="d-flex justify-content-start page-title page-title-m3">
+            <div class="p-0 d-none d-sm-flex">
+              <div class="p-0 mr-2">
+                <button type="button" class="btn btn-primary" (click)="addSubjectCategory()">+ Add Subject</button>
+              </div>
+            </div>
+            <div class="p-0">
+              <div class="d-flex">
+                <div class="p-0">
+                  <div class="form-group has-search">
+                    <span class="fa fa-search form-control-feedback"></span>
+                    <input type="text" class="form-control" placeholder="Search" name="search"
+                      [(ngModel)]="searchSubjectInput">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="ml-auto p-0 d-none d-md-flex">
+              <button type="button" *ngIf="showActivateBtn" (click)="activateSelectedUsers()" class="btn btn-primary btn-sm ml-1 mr-1">{{labels.BUTTONS.DEACTIVATE}}</button>
+            </div>
+          </div>
+
+          <card cardTitle="Subject Category">
+            <table class="table table-bordered table-hover">
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>NAME</th>
+                  <th>ACTIONS</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr
+                  *ngFor="let item of subjectCategories | paginate: { id: 'pager', itemsPerPage: pageSize, currentPage: pageNumber};let index = index">
+                  <td>{{item.id}}</td>
+                  <td>{{item.name}}</td>
+                  <td>
+                    <a>
+                      <span class="fa fa-pencil-square-o mr-2"></span>
+                    </a>
+                    <a>
+                      <span class="fa fa-trash"></span>
+                    </a>
+                  </td>
+                </tr>
+                <tr *ngIf="subjectCategories.length === 0">
+                  <td colspan="3">No Data Found</td>
+                </tr>
+              </tbody>
+            </table>
+            <form class="pagination-wrapper">
+              <div class="form-group pages">
+                <pagination-controls class="my-pagination" id="pager" (pageChange)="pageChanged($event)" maxSize="9"
+                  directionLinks="true" autoHide="true" previousLabel="Prev" nextLabel="Next"
+                  screenReaderPaginationLabel="Pagination" screenReaderPageLabel="page"
+                  screenReaderCurrentLabel="You're on page">
+                </pagination-controls>
+              </div>
+              <div class="form-group options pages">
+                <div class="input-group input-group-sm">
+                  <select class="form-control" name="pageChangedName" [(ngModel)]="pageSize"
+                    (ngModelChange)="loadData()">
+                    <option>1</option>
+                    <option>5</option>
+                    <option>10</option>
+                    <option>20</option>
+                    <option>50</option>
+                    <option>100</option>
+                    <option>200</option>
+                  </select>
+                  <span class="input-group-addon addon-right">Per Page</span>
+                </div>
+              </div>
+            </form>
+          </card>
+        </div>
+
+      </div>
+
+    </card>
+  </div> -->
 </div>
