--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -14,6 +14,11 @@
     flex-direction: row;
     background: transparent;
     overflow-x: hidden;
+    sidebar {
+        height: calc(100vh - 85px);
+        position: relative;
+        z-index: 9;
+    }
     .pages-content {
         padding: 15px;
         flex: 1;
@@ -22,5 +27,13 @@
         border-top: 1px solid $border-color;
         color: $fonts-color;
         overflow-x: hidden;
+    }
+}
+
+@media (max-width: 1024px) {
+    .pages-body {
+        sidebar {
+            position: absolute;
+        }
     }
 }
