--- a/src/app/shared/_styles.scss
+++ b/src/app/shared/_styles.scss
@@ -8,3 +8,5 @@
 @import './theme/cover/_modal';
 @import './theme/cover/_pell-editor';
 @import './theme/cover/_ng2-select';
+
+@import './theme/overrides';
