--- a/src/app/pages/categeories/components/add-class-to-category/add-class-to-category.component.html
+++ b/src/app/pages/categeories/components/add-class-to-category/add-class-to-category.component.html
@@ -1,43 +1,40 @@
 <div class="modal-header">
-      <h4 class="modal-title pull-left">Title</h4>
-      <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
+  <h4 class="modal-title pull-left">Title</h4>
+  <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<div class="modal-body">
 
-    <div class="row">
+  <div class="row">
 
     <form [formGroup]="addClasstoCategoryForm" (ngSubmit)="onSubmit()">
-          <div class="col-md-6 form-group">
-              <label>Select Category:</label>
-              <select formControlName="category" class="">
+      <div class="col-md-6 form-group">
+        <label>Select Category:</label>
+        <select formControlName="category" class="">
           <option value="0">--All--</option>
           <option *ngFor="let category of categeories" value={{category.id}}>
             {{category.name}}
           </option>
         </select>
 
-             
-          </div>
-          <div class="col-md-6 form-group">
-              <label>Class Name</label>
-              <input type="text" formControlName="className" class="form-control" [ngClass]="{ 'is-invalid': formControls.className.errors }"
-              />
-              <div *ngIf="formControls.className.errors" class="invalid-feedback">
-                  <div *ngIf="formControls.className.errors.required">Class Name is required</div>
-              </div>
-          </div>
-         
-      </form>
 
-    
+      </div>
+      <div class="col-md-6 form-group">
+        <label>Class Name</label>
+        <input type="text" formControlName="className" class="form-control"
+          [ngClass]="{ 'is-invalid': formControls.className.errors }" />
+        <div *ngIf="formControls.className.errors" class="invalid-feedback">
+          <div *ngIf="formControls.className.errors.required">Class Name is required</div>
+        </div>
+      </div>
 
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Close</button>
-      <button type="button" class="btn btn-primary" (click)="onSubmit()">Create</button>
-    </div>
+    </form>
 
 
 
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Close</button>
+    <button type="button" class="btn btn-primary" (click)="onSubmit()">Create</button>
+  </div>
