--- a/src/app/pages/categeories/components/categeories/categeories.component.scss
+++ b/src/app/pages/categeories/components/categeories/categeories.component.scss
@@ -98,7 +98,7 @@
      padding: 0 7px;
      line-height: 30px;
      color: #369;
-     font-weight: bold;
+     font-weight: normal;
      border-left:1px solid rgb(100,100,100);
 
    }
