--- a/src/app/pages/categeories/components/edit-class-to-category/edit-class-to-category.component.html
+++ b/src/app/pages/categeories/components/edit-class-to-category/edit-class-to-category.component.html
@@ -8,7 +8,7 @@
 
   <div class="row">
 
-    <form [formGroup]="addClasstoCategoryForm" (ngSubmit)="onSubmit()">
+    <form [formGroup]="editClasstoCategoryForm" (ngSubmit)="onSubmit()">
       <div class="col-md-6 form-group">
         <label>Select Category:</label>
         <select formControlName="category" class="">
