--- a/src/app/shared/components/profile/profile.component.html
+++ b/src/app/shared/components/profile/profile.component.html
@@ -8,7 +8,7 @@
       <span class="user-post">{{userPost}}</span>
       <span class="map-location">
         <i class="fa fa-map-marker"></i>
-        <span>Shen Zhen</span>
+        <span>Abhishek</span>
       </span>
     </div>
     <div class="profile-head">
