--- a/src/app/shared/theme/color-schemes/_default.scss
+++ b/src/app/shared/theme/color-schemes/_default.scss
@@ -3,7 +3,7 @@ $default-text:14px;
 $sm-text:12px;
 $lg-text:16px;
 $body-bg:#fff;
-$sidebar-bg:#004C89;
+$sidebar-bg: #020151;
 $sidebar-fonts-color:#fff;
 $card-bg:#fff;
 $card-border:#e4e3e3;
@@ -12,7 +12,7 @@ $black:#000;
 $border-color:rgba($black, .1);
 $table-border-color:#e6e6e6;
 $fonts-color:#26253c;
-$primary:#004C89;
+$primary:#020151;
 $secondry: #26253c;
 $success:#16be9a;
 $danger:#fa5167;
@@ -27,7 +27,7 @@ body {
 }
 
 .bg-primary {
-    @include linear-gradient(to top right, $primary, #004C89);
+    @include linear-gradient(to top right, $primary, #020151);
 }
 
 .bg-success {
