--- a/src/app/layout/components/pages-top/pages-top.component.html
+++ b/src/app/layout/components/pages-top/pages-top.component.html
@@ -1,32 +1,50 @@
 <div class="pages-top">
+
   <div class="avatar-wrap">
-    <div class="avatar">
-      <img src="{{avatarImgSrc}}" alt="avatar">
+
+    <div class="collapse-menu" (click)="_sidebarToggle()">
+      <!-- <i class="fa fa-navicon fa-fw" [ngClass]="{'toggle-on':sidebarToggle,'toggle-off':!sidebarToggle}"></i> -->
+      <i class="fa fa-dedent fa-fw" *ngIf="sidebarToggle"></i>
+      <i class="fa fa-indent fa-fw" *ngIf="!sidebarToggle"></i>
     </div>
-    <div class="user-info-wrap">
+
+    <div class="avatar">
+      <img src="{{avatarImgSrc}}" (click)="redirectToDashboard()" alt="Hansa Logo">
+    </div>
+    <!-- <div class="user-info-wrap">
       <span class="user-name" title="{{userName}}">{{userName}}</span>
       <span class="user-post" title="{{userPost}}">{{userPost}}</span>
-    </div>
-  </div>
-
-  <div class="collapse-menu" (click)="_sidebarToggle()">
-    <!-- <i class="fa fa-navicon fa-fw" [ngClass]="{'toggle-on':sidebarToggle,'toggle-off':!sidebarToggle}"></i> -->
-    <i class="fa fa-dedent fa-fw" *ngIf="sidebarToggle"></i>
-    <i class="fa fa-indent fa-fw" *ngIf="!sidebarToggle"></i>
+    </div> -->
   </div>
 
 
-  <div class="search-group d-none d-md-block">
+
+
+  <!-- <div class="search-group d-none d-md-block">
     <input type="text" class="search-input" placeholder="Search project · · ·">
     <button class="search-btn">
       <i class="fa fa-search fa-fw"></i>
     </button>
-  </div>
+  </div> -->
 
   <div class="msg-tips-wrap">
+    <div class="msg-entrance email">
+      <div class="" dropdown>
+        <span class="fa fa-bell fa-fw" id="basic-link" dropdownToggle (click)="false"
+          aria-controls="basic-link-dropdown"></span>
+        <span class="badge" *ngIf="tip.ring"></span>
+        <ul id="dropdown-custom-html" *dropdownMenu class="dropdown-menu" role="menu"
+          aria-labelledby="button-custom-html">
+          <li role="menuitem"><a class="dropdown-item" href="#">Action</a></li>
+          <li role="menuitem"><a class="dropdown-item" href="#">Another action</a></li>
+          <li role="menuitem"><a class="dropdown-item" href="#">Another action</a></li>
+          <li role="menuitem"><a class="dropdown-item" href="#">Another action</a></li>
+        </ul>
+      </div>
+    </div>
 
 
-    <div class="msg-entrance ring">
+    <!-- <div class="msg-entrance ring">
       <span dropdown container="body" (onShown)="onShown()" (onHidden)="onHidden()" (isOpenChange)="isOpenChange()">
         <span class="fa fa-bell fa-fw" id="basic-link" dropdownToggle (click)="false"
           aria-controls="basic-link-dropdown"></span>
@@ -37,9 +55,9 @@
           </li>
         </ul>
       </span>
-    </div>
+    </div> -->
     <div class="msg-entrance email">
-      <span class="fa fa-envelope fa-fw"></span>
+      <span class="fa fa-envelope fa-fw" (click)="redirectToMessages()"></span>
       <span class="badge" *ngIf="tip.email"></span>
     </div>
     <div class="msg-entrance logout">
