added dashboard tutor search

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-4 animated fadeIn">
+  <!-- <div class="col-md-4 animated fadeIn">
     <div class="card card-block tip-card">
       <div class="tip-msg">
         <h3>Messages</h3>
@@ -9,8 +9,8 @@
         <i class="fa fa-comments fa-fw"></i>
       </button>
     </div>
-  </div>
-  <div class="col-md-4 animated fadeIn">
+  </div> -->
+  <!-- <div class="col-md-4 animated fadeIn">
     <div class="card card-block tip-card">
       <div class="tip-msg">
         <h3>Mails</h3>
@@ -20,8 +20,8 @@
         <i class="fa fa-envelope fa-fw"></i>
       </button>
     </div>
-  </div>
-  <div class="col-md-4 animated fadeIn">
+  </div> -->
+  <!-- <div class="col-md-4 animated fadeIn">
     <div class="card card-block tip-card">
       <div class="tip-msg">
         <h3>Feedback</h3>
@@ -31,13 +31,18 @@
         <i class="fa fa-warning fa-fw"></i>
       </button>
     </div>
-  </div>
+  </div> -->
   <!-- <div class="col-md-8 class-subject">
     <card cardTitle='Classes and Subjects' isCollapse="true">      
       <div class="col-md-12">
       </div>
     </card>
   </div> -->
+  <div class="col-md-6">
+    <card cardTitle="Search Tutor" isCollapse="true">
+      <app-tutorslist></app-tutorslist>
+    </card>
+  </div>
   <div class="col-md-6">
     <card cardTitle="Todo List" isCollapse="true">
       <du-todolist></du-todolist>
@@ -48,5 +53,5 @@
       <profile></profile>
     </card>
   </div>
- 
+
 </div>
