--- a/src/app/pages/categeories/components/class-categories/class-categories.component.scss
+++ b/src/app/pages/categeories/components/class-categories/class-categories.component.scss
@@ -101,6 +101,7 @@
      color: #369;
      font-weight: bold;
      border-left:1px solid rgb(100,100,100);
+     padding-bottom: 5px;     
 
      .subtitle {
         font-size: 0.7rem;
