--- a/src/app/shared/components/todolist/todolist.component.scss
+++ b/src/app/shared/components/todolist/todolist.component.scss
@@ -1,4 +1,5 @@
 @import '../../theme/conf';
+
 .edit-input {
     padding: 0 2%;
     width: 100%;
@@ -38,10 +39,14 @@
     @include transition(all 0.4s);
     &:hover {
         background: rgba($primary, .8);
+        color: $white;
         .edit-input,
         .enter-task-edit,
         .cancel-task-edit {
             border: 1px solid $white;
+        }
+        .over-btn {
+            color: $white;
         }
     }
 }
@@ -79,7 +84,7 @@
     @include center(40px, 39px);
     .fa-square-o {
         margin-left: -2px;
-    }
+    }    
 }
 
 .enter-task-edit,
