--- a/src/app/pages/dashboard/components/student-dashboard/student-dashboard.component.html
+++ b/src/app/pages/dashboard/components/student-dashboard/student-dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
   <div class="col-md-3 animated fadeIn">
     <div class="card card-block tip-card">
       <div class="tip-msg">
@@ -44,12 +44,20 @@
     </div>
   </div>
 
-</div>
+</div> -->
 
 <div class="row">
   <div class="col-md-12 student-enquires">
-    <card cardTitle="Student Enquiries" isCollapse="true">
+    <card cardTitle="Student Enquiries" isCollapse="false">
       <app-student-enquires></app-student-enquires>
+    </card>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-12">
+    <card cardTitle="List of Tutors" isCollapse="false">
+      <app-tutor-datatable></app-tutor-datatable>
     </card>
   </div>
 </div>
