--- a/src/app/pages/faq/components/teacher-faq/teacher-faq.component.html
+++ b/src/app/pages/faq/components/teacher-faq/teacher-faq.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-12">
-      <card cardTitle="Teachers Frequently Asked Questions ?" isCollapse="true">
+      <card cardTitle="Frequently Asked Questions ?" isCollapse="true">
         <div class="page-title page-title-m3">
   
           <div class="d-flex justify-content-start page-title page-title-m3">
