--- a/src/app/shared/components/card/card.component.scss
+++ b/src/app/shared/components/card/card.component.scss
@@ -11,7 +11,7 @@
         line-height: 40px;
         font-size: $default-text+1;
         font-weight: 700;
-        text-transform: uppercase;
+        // text-transform: uppercase;
     }
 }
 
