--- a/src/app/pages/dashboard/components/tutor-datatable-filter/tutor-datatable-filter.component.html
+++ b/src/app/pages/dashboard/components/tutor-datatable-filter/tutor-datatable-filter.component.html
@@ -18,7 +18,7 @@
           <input type="text" formControlName="location" class="form-control" />
         </div> -->
         <div class="form-group">
-          <!-- <label>Pincode</label> -->
+          <label>Pincode</label>
           <input type="text" formControlName="pincode" class="form-control"
             placeholder="Please choose Pincode"
             [ngClass]="{ 'is-invalid': f.pincode.errors }" />
@@ -29,51 +29,50 @@
         <div class="form-group">
           <label>Class Category</label>
           <select class="custom-select" (change)="changedClassCategory($event)" formControlName="classcategory">
-            <option value="" disabled>Choose your Class Category</option>
-            <option *ngFor="let category of categories" [value]="category.id">{{category.name}}</option>
+            <option value="" disabled>Choose Class Category</option>
+            <option *ngFor="let category of categories" [value]="category.id">{{category.name}}</option>            
           </select>
         </div>
         <div class="form-group">
           <label>Subject Category</label>
           <select class="custom-select" formControlName="subject">
-            <option value="" disabled>Choose your Subject Category</option>
+            <option value="" disabled selected>Choose Subject</option>
             <option *ngFor="let subject of subjects" [value]="subject.name">{{subject.name}}</option>
           </select>
         </div>
         <div class="form-group">
           <label>Gender</label>
           <select class="custom-select" formControlName="gender">
-            <option value="" disabled>Choose your Subject Category</option>
+            <option value="" disabled>Choose Gender</option>
             <option *ngFor="let gender of allGenders" [value]="gender.value">{{gender.display}}</option>
           </select>
         </div>
         <div class="form-group">
           <label>Mode of Teaching</label>
           <select class="custom-select" formControlName="modeOfTeaching">
-            <option value="" disabled>Choose your mode of Teaching</option>
-            <option *ngFor="let teaching of modeTeaching" [ngValue]="teaching.value">{{teaching.display}}</option>
+            <option value="" disabled>Choose mode of Teaching</option>
+            <option *ngFor="let teaching of modeTeaching" [value]="teaching.value">{{teaching.display}}</option>
           </select>
         </div>
         <div class="form-group">
           <label>Mode of Job</label>
           <select class="custom-select" formControlName="jobType">
-            <option value="" disabled>Choose your mode of Job</option>
-            <option *ngFor="let job of modeJob" [ngValue]="job.value">{{job.display}}</option>
+            <option value="" disabled>Choose mode of Job</option>
+            <option *ngFor="let job of modeJob" [value]="job.value">{{job.display}}</option>
           </select>
         </div>
         <div class="form-group">
           <label>Experience</label>
           <select class="custom-select" formControlName="experience">
             <option value="" disabled>Choose Expeience</option>
-            <option *ngFor="let experience of experiences" [ngValue]="experience.value">{{experience.display}}</option>
-            <option value="" selected>Any</option>
+            <option *ngFor="let experience of experiences" [value]="experience.value">{{experience.display}}</option>            
           </select>
         </div>
         <div class="form-group">
           <label>Fluency in English </label>
           <select class="custom-select" formControlName="fluencyInEnglish">
-            <option value="" disabled>Choose your Fluency in English </option>
-            <option *ngFor="let fluency of fluencyEnglish" [ngValue]="fluency.value">{{fluency.display}}</option>
+            <option value="" disabled>Choose Fluency in English </option>
+            <option *ngFor="let fluency of fluencyEnglish" [value]="fluency.value">{{fluency.display}}</option>
           </select>
         </div>
         <!-- <div class="form-group">
@@ -99,6 +98,7 @@
         <div class="form-group">
           <label>Email</label>
           <input type="text" formControlName="email" class="form-control"
+          placeholder="Enter Email"
             [ngClass]="{ 'is-invalid': f.email.errors }" />
           <div *ngIf="f.email.errors" class="invalid-feedback">
             <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
