--- a/src/app/pages/faq/components/general-faq/general-faq.component.html
+++ b/src/app/pages/faq/components/general-faq/general-faq.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-12">
-      <card cardTitle="General Frequently Asked Questions ?">
+      <card cardTitle="Frequently Asked Questions ?">
         <div class="page-title page-title-m3">
   
           <div class="d-flex justify-content-start page-title page-title-m3">
